# nanoem

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  circle.yml  cpp.hint  package.json
dependencies/fx9/: CMakeLists.txt  main.cc  sokol.cc  sokol_impl.c  sokol_impl.m
dependencies/fx9/cmake/: common.cmake
dependencies/fx9/src/: Compiler.cc  Glue.cc  Lexer.cc  Parser.cc  Syntax.y
dependencies/fx9/test/: state.cc  syntax.cc
dependencies/nanodxm/: CMakeLists.txt  fuzz.cc  nanodxm.c  nanodxm.h  nanodxm_p.h  package.json  test.c
dependencies/nanodxm/cmake/: nanoem.cmake
dependencies/nanomqo/: CMakeLists.txt  fuzz.cc  nanomqo.c  nanomqo.h  nanomqo_p.h  package.json  test.c
dependencies/undo/: CMakeLists.txt  LICENSE.MIT  package.json  test.c  undo.c  undo.h
emapp/: CMakeLists.txt
emapp/bundle/: CMakeLists.txt  bundle.cc  bundle_c.c  config.h  wildcardcmp.c
emapp/bundle/sokol/: CMakeLists.txt  sokol_d3d11.c  sokol_d3d11.def  sokol_delegate.c  sokol_glcore33.c  sokol_glcore33.def  sokol_gles2.c  sokol_gles3.c  sokol_gles3.def  sokol_metal_common.m  sokol_metal_ios.m  sokol_metal_macos.m  sokol_noop.c  sokol_noop.def  sokol_webgpu.c  sokol_webgpu.def  sokol_webgpu_dawn.cc  sokol_wgpu.c
emapp/fuzz/: CMakeLists.txt  fuzz_image_apng.cc  fuzz_image_dds.cc  fuzz_image_pfm.cc
emapp/integration/: IExecutor.h  LoadPMMExecutor.h
emapp/plugins/: CMakeLists.txt
emapp/resources/: CMakeLists.txt  credits.cc  credits.md  credits.md.in  font.cc  toon.cc  translation.cc
emapp/src/: Accessory.cc  AccessoryProgramBundle.cc  Allocator.cc  ApplicationMenuBuilder.cc  ApplicationPreference.cc  Archiver.cc  BaseApplicationClient.cc  BaseApplicationService.cc  BaseAudioPlayer.cc  BezierCurve.cc  CommandMessage.inl  CommandRegistrator.cc  CommonInclude.cc  DefaultFileManager.cc  DefaultTranslator.cc  DirectionalLight.cc  Effect.cc  Error.cc  FileUtils.cc  Grid.cc  ImageLoader.cc  ModalDialogFactory.cc  Model.cc  ModelProgramBundle.cc  Motion.cc  PerspectiveCamera.cc  PhysicsEngine.cc  PixelFormat.cc  PluginFactory.cc  Progress.cc  Project.cc  ShadowCamera.cc  StateController.cc  StringUtils.cc  ThreadedApplicationClient.cc  ThreadedApplicationService.cc  TimelineSegment.cc  URI.cc  UUID.cc
emapp/test/: common.h  main.cc  main.mm
glfw/: CMakeLists.txt  model_skinning_tf.hlsl
glfw/mt/: CMakeLists.txt  main.cc
glfw/st/: CMakeLists.txt  main.cc
macos/: CMakeLists.txt  Info.plist.in  main.mm  test.mm
macos/Resources/: nanoem.icns
macos/classes/: AnalyticsTracker.h  AnalyticsTracker.mm  ApplicationDelegate.h  ApplicationDelegate.mm  AudioUnitAudioPlayer.h  AudioUnitAudioPlayer.mm  BaseVideoRecorder.h  BaseVideoRecorder.mm  CocoaApplicationMenuBuilder.h  CocoaApplicationMenuBuilder.mm  CocoaThreadedApplicationService.h  CocoaThreadedApplicationService.mm  CommonPolyfill.h  Document.h  Document.mm  ErrorExtension.h  ICocoaBackgroundRenderer.h  MainWindow.h  MainWindow.mm  MainWindowDelegate.h  MainWindowDelegate.mm  MenuItemCollection.h  MenuItemCollection.m  MetalBackgroundRenderer.h  MetalBackgroundRenderer.mm  MetalSkinDeformerFactory.h  MetalSkinDeformerFactory.mm  MetalVideoRecorder.h  MetalVideoRecorder.mm  OpenGLBackgroundRenderer.h  OpenGLBackgroundRenderer.mm  OpenGLVideoRecorder.h  OpenGLVideoRecorder.mm  Preference.h  Preference.mm
nanoem/: CMakeLists.txt  nanoem.c  nanoem.h  nanoem_p.h  version.c.in
nanoem/ext/: cfstring.c  cfstring.h  converter.c  converter.h  document.c  document.h  document_p.h  emscripten.cc  emscripten.h  icu.c  icu.h  json.c  json.h  mbwc.c  mbwc.h  motion.c  motion.h  motion.pb-c.c  motion.pb-c.h  mutable.c  mutable.h  mutable_p.h  physics.h  physics_bullet.cc  qt.cc  qt.h
nanoem/fuzz/: common.h  fuzz_document.cc  fuzz_model_pmd.cc  fuzz_model_pmx.cc  fuzz_motion_nmd.cc  fuzz_motion_vmd.cc
nanoem/proto/: motion.proto
nanoem/test/: accessory_keyframe.cc  bone.cc  bone_keyframe.cc  buffer.cc  camera_keyframe.cc  common.cc  common.h  constraint.cc  document.cc  joint.cc  label.cc  light_keyframe.cc  material.cc  model.cc  model_keyframe.cc  morph.cc  morph_keyframe.cc  motion.cc  rigid_body.cc  self_shadow_keyframe.cc  texture.cc  vertex.cc
qt/: CMakeLists.txt  MainWindow.cc  MainWindow.h  QtApplicationClient.cc  QtApplicationClient.h  QtApplicationMenuBuilder.cc  QtApplicationMenuBuilder.h  QtApplicationService.cc  QtApplicationService.h  main.cc
rust/: Cargo.toml  deny.toml
rust/core/: Cargo.toml  build.rs
rust/main/: Cargo.toml
rust/plugin_debugger/: Cargo.toml
rust/plugin_model_sandbox/: Cargo.toml
rust/plugin_motion_sandbox/: Cargo.toml
rust/plugin_wasm/: Cargo.toml
rust/plugin_wasm_test_model_full/: Cargo.toml
rust/plugin_wasm_test_model_minimum/: Cargo.toml
rust/plugin_wasm_test_motion_full/: Cargo.toml
rust/plugin_wasm_test_motion_minimum/: Cargo.toml
rust/protobuf/: Cargo.toml  build.rs
rust/scripts/: build.bat  build.sh  test.bat  test.sh
rust/wasm/: Cargo.toml
sandbox/: CMakeLists.txt  convert.cc  document.cc  emapp.cc  euler.cc  image.cc  logo.html  model.cc  motion.cc  plugin_audio.cc  plugin_model.cc  plugin_motion.cc  plugin_video.cc  project.cc  softbody.cc  strip.cc  transformer.cc  validate.cc  xlsx.cc
sapp/: CMakeLists.txt  main.cc  sapp.c  sapp.m
sapp/include/: ApplicationClient.h  ApplicationService.h  MainWindow.h
sapp/src/: ApplicationClient.cc  ApplicationService.cc  MainWindow.cc
win32/: CMakeLists.txt  main.cc  nanoem.manifest  test.cc  version.rc.in
win32/ffmpeg/: run.bat  wrapper.sh
win32/include/: COMInline.h  D3D11BackgroundDrawer.h  D3D11SkinDeformerFactory.h  D3D11VideoRecorder.h  Dialog.h  MainWindow.h  Preference.h  WASAPIAudioPlayer.h  Win32ApplicationMenuBuilder.h  Win32ThreadedApplicationService.h  XAudio2AudioPlayer.h
win32/src/: D3D11BackgroundDrawer.cc  D3D11SkinDeformerFactory.cc  D3D11VideoRecorder.cc  Dialog.cc  MainWindow.cc  Preference.cc  WASAPIAudioPlayer.cc  Win32ApplicationMenuBuilder.cc  Win32ThreadedApplicationService.cc  XAudio2AudioPlayer.cc
(+987 files in other folders)
